# bevy_wireframe

./: Cargo.toml  README.md  shader_instancing.dot  todo.org
assets/: shader_toy.wgsl  wireframe.wgsl
assets/shaders/: dist.wgsl  instancing.wgsl
examples/: dump_render_graph.rs  material.rs  mesh2d_manual.rs  render_graph.dot  shader_instancing.rs  shader_toy.dot
examples/shader_toy/: main.rs
src/: compute.rs  face_compute.wgsl  lib.rs  material.rs  wireframe.wgsl  wireframe2d.rs
