[package]
name = "bevy_wireframe"
version = "0.1.0"
edition = "2021"

[dependencies]
# bevy = "0.13.2"
bevy = { path = "../bevy" }
bytemuck = "1.15.0"
# bevy_mod_debugdump = "0.10.0"
# bevy_mod_debugdump = { path = "../bevy_mod_debugdump" }

# [patch.crates-io]
# bevy = { path = "../bevy" }
# bevy_a11y = { path = "../bevy/crates/bevy_a11y" }
# bevy_animation = { path = "../bevy/crates/bevy_animation" }
# bevy_app = { path = "../bevy/crates/bevy_app" }
# bevy_asset = { path = "../bevy/crates/bevy_asset" }
# bevy_audio = { path = "../bevy/crates/bevy_audio" }
# bevy_color = { path = "../bevy/crates/bevy_color" }
# bevy_core = { path = "../bevy/crates/bevy_core" }
# bevy_core_pipeline = { path = "../bevy/crates/bevy_core_pipeline" }
# bevy_derive = { path = "../bevy/crates/bevy_derive" }
# bevy_dev_tools = { path = "../bevy/crates/bevy_dev_tools" }
# bevy_diagnostic = { path = "../bevy/crates/bevy_diagnostic" }
# bevy_dylib = { path = "../bevy/crates/bevy_dylib" }
# bevy_dynamic_plugin = { path = "../bevy/crates/bevy_dynamic_plugin" }
# bevy_ecs = { path = "../bevy/crates/bevy_ecs" }
# bevy_encase_derive = { path = "../bevy/crates/bevy_encase_derive" }
# bevy_gilrs = { path = "../bevy/crates/bevy_gilrs" }
# bevy_gizmos = { path = "../bevy/crates/bevy_gizmos" }
# bevy_gltf = { path = "../bevy/crates/bevy_gltf" }
# bevy_hierarchy = { path = "../bevy/crates/bevy_hierarchy" }
# bevy_input = { path = "../bevy/crates/bevy_input" }
# bevy_internal = { path = "../bevy/crates/bevy_internal" }
# bevy_log = { path = "../bevy/crates/bevy_log" }
# bevy_macro_utils = { path = "../bevy/crates/bevy_macro_utils" }
# bevy_math = { path = "../bevy/crates/bevy_math" }
# bevy_mikktspace = { path = "../bevy/crates/bevy_mikktspace" }
# bevy_pbr = { path = "../bevy/crates/bevy_pbr" }
# bevy_ptr = { path = "../bevy/crates/bevy_ptr" }
# bevy_reflect = { path = "../bevy/crates/bevy_reflect" }
# bevy_render = { path = "../bevy/crates/bevy_render" }
# bevy_scene = { path = "../bevy/crates/bevy_scene" }
# bevy_sprite = { path = "../bevy/crates/bevy_sprite" }
# bevy_tasks = { path = "../bevy/crates/bevy_tasks" }
# bevy_text = { path = "../bevy/crates/bevy_text" }
# bevy_time = { path = "../bevy/crates/bevy_time" }
# bevy_transform = { path = "../bevy/crates/bevy_transform" }
# bevy_ui = { path = "../bevy/crates/bevy_ui" }
# bevy_utils = { path = "../bevy/crates/bevy_utils" }
# bevy_window = { path = "../bevy/crates/bevy_window" }
# bevy_winit = { path = "../bevy/crates/bevy_winit" }
